--- a/wp-content/themes/allyourbasetheme/assets/css/style.css
+++ b/wp-content/themes/allyourbasetheme/assets/css/style.css
@@ -120,18 +120,34 @@ h1, h2, h3 {
 h1 a, .h1 a, h2 a, .h2 a, h3 a, .h3 a, h4 a, .h4 a, h5 a, .h5 a {
   text-decoration: none; }
   
+h1, .huge, .largetitle {
+  font-size: 2.125rem; }
+
+h2, .large {
+  font-size: 1.6875rem; }
+
+h3, .big {
+  font-size: 1.375rem; }
+
+h4, .smalltitle {
+  font-size: 1.125rem; }
+
+h5 {
+  font-size: 1.125rem; }
+
+h6, .normal {
+  font-size: 1rem; }
+  
+.small {
+  font-size: .8rem;
+  }
+    
 .subtitle {
   text-transform:uppercase;
   letter-spacing:2px;
   font-weight:300;
 }
 
-.smalltitle {
-  font-size:1.25rem;
-}
-.largetitle {
-  font-size:2.25rem;
-}
 
 /*********************
 HEADER STYLES
