--- a/wp-content/themes/allyourbasetheme/assets/css/style.css
+++ b/wp-content/themes/allyourbasetheme/assets/css/style.css
@@ -48,13 +48,16 @@ BACKGROUND STYLES
 .bg-tower { background-image: url(../images/backgrounds/souther-california-life-gaurd-tower.jpg); }
 .bg-carosell { background-image: url(../images/backgrounds/spectrum-carosell.jpg); }
 
-.bg-gray { background: #fafafa; }
+.bg-black { background: #000; }
 .bg-white { background: #fff; }
+.bg-gray { background: #fafafa; }
 
 .bg-gray1 { background: #f1f1f1; }
 .bg-gray2 { background: #eaeaea; }
 .bg-gray3 { background: #e4e4e4; }
-.bg-gray4 { background: #dedede; }
+
+.bg-gray4 { background: #656565; }
+.bg-gray5 { background: #565656; }
 
 
 
@@ -105,6 +108,7 @@ ICON STYLES
 /*********************
 LINK STYLES
 *********************/
+
 a:link, a:visited:link {
   /*
 		This highlights links on iPhones/iPads.
@@ -112,14 +116,18 @@ a:link, a:visited:link {
 		*/
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0.3); }
   
+
+a:hover, a:focus {
+  color:#000;
+}
   
 
 /*********************
 H1, H2, H3, H4, H5 P STYLES
 *********************/
-h1, h2, h3 {
+/*h1, h2, h3 {
   font-weight:300;
-}
+}*/
 
 h1 a, .h1 a, h2 a, .h2 a, h3 a, .h3 a, h4 a, .h4 a, h5 a, .h5 a {
   text-decoration: none; }
@@ -418,39 +426,6 @@ HOMEPAGE STYLES
 }
 
 
-
-#values {
-  padding:4.2rem 0;
-}
-#values h2 {
-  font-size:1.25rem;
-}
-#values h2+p {
-  padding:0 1rem;
-}
-#values .fa-icon {
-  color: #fff;
-}
-
-#services {
-  padding:4.2rem 0;
-  background-image: url(../images/backgrounds/design-workspace.jpg);
-  background-size: cover;
-  background-position: top center;
-  background-repeat: no-repeat;
-}
-#services h3 {
-  margin-top:1.75rem;
-}
-#services h3 + div p {
-  padding:1em 0;
-  margin:0;
-}
-
-#contact-us {
-  padding:3.5em 0;
-}
-
 /*********************
 FORM STYLES
 *********************/
@@ -477,7 +452,7 @@ span.wpcf7-not-valid-tip:before {
 POSTS & CONTENT STYLES
 *********************/
 #content #inner-content {
-  padding: 1rem 0rem; }
+  padding: 2.5rem 0rem; }
 
 .page-title .vcard {
   border: 0px;
@@ -550,6 +525,38 @@ POSTS & CONTENT STYLES
     color: #FFFFFF; }
 
 
+.article-footer {
+  padding:1rem 0 0;
+  margin-bottom:1.5rem;
+  border-bottom:solid 1px #f2f2f2;
+}
+.article-footer .tags .tag-title {
+  padding: .25rem .5rem;
+  margin-right: .5rem;
+  font-size: .8rem;
+  color:#fff;
+  background: #656565;
+  border:solid 1px #656565;
+}
+
+.article-footer .tags a {
+  padding: .25rem .5rem;
+  margin-right: .5rem;
+  font-size: .8rem;
+  background: #fff;
+  border:solid 1px #f2f2f2;
+}
+.article-footer .tags a:hover, .article-footer .tags a:focus {
+  background: #e7e7e7;
+  
+}
+
+.post-sidebar {
+  border-left: solid 1px #f2f2f2;
+  padding-right:0px;
+}
+
+
 /*********************
 PAGE NAVI STYLES
 *********************/
@@ -559,6 +566,11 @@ PAGE NAVI STYLES
 /*********************
 COMMENT STYLES
 *********************/
+
+#comments .panel {
+  background:none;
+  border: solid 1px #f2f2f2; 
+}
 #comments .commentlist {
   margin-left: 0px; }
 
@@ -695,6 +707,7 @@ SIDEBARS & ASIDES
 
 #sidebar-offcanvas .widgettitle {
   color: #fff; }
+ 
 
 /*********************
 FOOTER STYLES
