--- a/wp-content/themes/allyourbasetheme/assets/css/style.css
+++ b/wp-content/themes/allyourbasetheme/assets/css/style.css
@@ -28,7 +28,7 @@ body, h1, h2, h3, h4, h5, h6, .button, button, .top-bar-section ul li>a {
   
 }
 .button.secondary:focus, .button.secondary:hover, button.secondary:focus, button.secondary:hover {
-  background-color: #c52606;
+  background-color: #FF0202;
     color: #fff;
 }
 
@@ -155,9 +155,10 @@ h6, .normal {
   }
     
 .subtitle {
-  text-transform:uppercase;
-  letter-spacing:2px;
-  font-weight:300;
+    text-transform: uppercase;
+    letter-spacing: .5px;
+    font-weight: 300;
+    word-spacing: 0.15rem;
 }
 
 /*********************
@@ -220,7 +221,7 @@ HEADER STYLES
   width:100%;  
   padding: 1rem;
   z-index: 1;
-  background: #656565;
+  background: #000;
 }
 
 .header ul.off-canvas-list li {
@@ -458,9 +459,48 @@ POSTS & CONTENT STYLES
   border: 0px;
   padding: 0px; }
 
-.byline {
-  color: #999; }
+.entry-title a {
+  display:block;
+  color: #000;
+}
+.entry-title a:hover, .entry-title a:focus {
+  color: #FF0202;
+}
 
+.entry-title .entry-thumb img {
+  margin-bottom: .5rem;
+}
+
+.entry-subtitle p {
+  margin: 0 0 .5rem;
+}
+
+.byline {
+  color: #999;
+  font-size: italic;
+  padding: 1px 0;
+  margin: 0; 
+  border-top: solid 1px #f2f2f2;
+  border-bottom: solid 1px #f2f2f2;
+  }
+  
+ .byline a {
+   color: #999;
+   font-weight:bold; 
+   border-color: #dedede !important;
+ }
+ .byline a:hover, .byline a:focus {
+   color: #000;
+   text-decoration:underline; 
+ }
+ 
+ .entry-content {
+   margin-top: 2rem; 
+ }
+
+.entry-content p {
+  margin-bottom: 2rem;
+}
 .entry-content img {
   max-width: 100%;
   height: auto; }
@@ -526,29 +566,42 @@ POSTS & CONTENT STYLES
 
 
 .article-footer {
-  padding:1rem 0 0;
-  margin-bottom:1.5rem;
-  border-bottom:solid 1px #f2f2f2;
+  padding: 1rem 0 0;
 }
-.article-footer .tags .tag-title {
+
+.entry-tags {
+  border-bottom: solid 1px #f2f2f2;
+}
+.article-footer .tags {
+  margin: 0;
+  padding-bottom: 1.25rem;
+}
+.article-footer .tags .tags-title {
   padding: .25rem .5rem;
   margin-right: .5rem;
+  margin-bottom:1rem;
   font-size: .8rem;
-  color:#fff;
-  background: #656565;
-  border:solid 1px #656565;
+  color:#000;
+  background: #e4e4e4;
+  border:solid 1px #e4e4e4;
 }
 
 .article-footer .tags a {
   padding: .25rem .5rem;
   margin-right: .5rem;
+  margin-bottom:1rem;
   font-size: .8rem;
   background: #fff;
   border:solid 1px #f2f2f2;
 }
 .article-footer .tags a:hover, .article-footer .tags a:focus {
-  background: #e7e7e7;
+  background: #FF0202;
+  border-color: #FF0202;
+  color: #fff;
   
+}
+.post-comments {
+  padding-top: 1.5rem;
 }
 
 .post-sidebar {
@@ -639,13 +692,13 @@ COMMENT STYLES
   display: inline-block;
   padding: 0.875rem 1.75rem 0.9375rem 1.75rem;
   font-size: 0.8125rem;
-  background-color: #008CBA;
-  border-color: #007095;
-  color: #FFFFFF;
+  background-color: #6a6a6a;
+  border-color: #6a6a6a;
+  color: #fff;
   transition: background-color 300ms ease-out;
   float: right; }
   .commentlist .comment-reply-link:hover, .commentlist .comment-reply-link:focus {
-    background-color: #007095; }
+    background-color: #FF0202; }
   .commentlist .comment-reply-link:hover, .commentlist .comment-reply-link:focus {
     color: #FFFFFF; }
 
@@ -682,7 +735,7 @@ COMMENT FORM STYLES
     .respond-form form textarea {
       resize: none;
       width: 97.3%;
-      height: 150px; }
+      height: 110px; }
 
 #comment-form-title {
   margin: 0 0 1.1em; }
