--- a/wp-content/themes/allyourbasetheme/assets/css/style.css
+++ b/wp-content/themes/allyourbasetheme/assets/css/style.css
@@ -608,6 +608,9 @@ POSTS & CONTENT STYLES
   border-left: solid 1px #f2f2f2;
   padding-right:0px;
 }
+.post-sidebar .sidebar {
+  border: none !important;
+}
 
 
 /*********************
@@ -749,6 +752,11 @@ COMMENT FORM STYLES
 /*********************
 SIDEBARS & ASIDES
 *********************/
+.sidebar {
+  border-top: solid 1px #f2f2f2;
+  border-right: solid 1px #f2f2f2;
+}
+
 .widget ul {
   margin: 0; }
   .widget ul li {
